--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,10 @@
             <artifactId>poi-ooxml</artifactId>
             <version>4.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-archetype-simple</artifactId>
+            <version>0.0.3</version>
+        </dependency>
     </dependencies>
 </project>
